# async-python-study

./: 2-2-async.py  2-scraping.py  3-1-hello-coroutine.py  3-2-task.py  3-3-io-multithreading.py  3-3-multithread.py  3-4-without-http.py  3-scraping.py  4-1-basic-fetcher.py  4-1-cpu-basic.py  4-2-async-fetcher.py  4-2-cpu-multiprocessing.py  4-2-cpu-multithreading.py  5-scraping.py  LICENSE  README.md  main copy.py  main.py  pyproject.toml
app/: config.py  main.py  secret.json  t.py
app/models/: __init__.py  book.py
app/templates/: index.html  item.html
